--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <!-- 576px以上の画面幅のとき、左側は3つ分のカラム幅で表示する指定を追加 -->
             <div class="col-sm-3">
                 <!-- 電話に関するBootstrap Iconsのアイコンを「お電話：」の左に追加 -->
-                <img class="bi bi-telephone-fill" src="https://e238b580307540dd9fce3961256a0b45.vfs.cloud9.ap-northeast-1.amazonaws.com/_static/kadai-bootstrap/icons/telephone-fill.svg" alt="telephonenoのアイコン"> <strong>お電話：</strong>
+                <img class="bi bi-telephone-fill" src="https://e238b580307540dd9fce3961256a0b45.vfs.cloud9.ap-northeast-1.amazonaws.com/_static/kadai-bootstrap/icons/telephone-fill.svg" alt="アイコン"> <strong>お電話：</strong>
             </div>
 
             <!-- 576px以上の画面幅のとき、右側は9つ分のカラム幅で表示する指定を追加 -->
@@ -82,7 +82,7 @@
                     <!-- カードのタイトル部分として設定 -->
                     <div class="card-header">
                         <!-- 営業時間の情報に関するBootstrap Iconsのアイコンを「営業時間」の左に追加 -->
-                        <img class="bi bi-info-circle-fill" src="https://e238b580307540dd9fce3961256a0b45.vfs.cloud9.ap-northeast-1.amazonaws.com/_static/kadai-bootstrap/icons/info-circle-fill.svg" alt="info-circle-fillのアイコン"> 営業時間
+                        <img class="bi bi-info-circle-fill" src="https://e238b580307540dd9fce3961256a0b45.vfs.cloud9.ap-northeast-1.amazonaws.com/_static/kadai-bootstrap/icons/info-circle-fill.svg" alt="アイコン"> 営業時間
                     </div>
 
                     <!-- カードの本文部分として設定 -->
@@ -98,7 +98,7 @@
             <!-- 576px以上の画面幅のとき、左側は3つ分のカラム幅で表示する指定を追加 -->
             <div class="col-sm-3">
                 <!-- メールに関するBootstrap Iconsのアイコンを「メール：」の左に追加 -->
-                <img class="bi bi-envelope" src="https://e238b580307540dd9fce3961256a0b45.vfs.cloud9.ap-northeast-1.amazonaws.com/_static/kadai-bootstrap/icons/envelope.svg" alt="envelopeのアイコン"> <strong>メール：</strong>
+                <img class="bi bi-envelope" src="https://e238b580307540dd9fce3961256a0b45.vfs.cloud9.ap-northeast-1.amazonaws.com/_static/kadai-bootstrap/icons/envelope.svg?_c9_id=livepreview4&_c9_host=https://ap-northeast-1.console.aws.amazon.com" alt="アイコン"> <strong>メール：</strong>
             </div>
 
             <!-- 576px以上の画面幅のとき、右側は9つ分のカラム幅で表示する指定を追加 -->
@@ -169,7 +169,8 @@
                         <!-- さらに、576px以上の画面幅のとき、9つ分のカラム幅で送信ボタンの表示部分の設定を追加 -->
                         <div class="offset-sm-3 col-sm-9">
                             <!-- 送信ボタンを緑色にする設定を追加 -->
-                            <button type="submit" class="btn w-100 btn-success">お問い合わせ内容を送信する</button>
+                            <button type="submit" class="btn w-100 btn-success"><a href="conplete.html">お問い合わせ内容を送信する</a></button>
+                            <!--<li class="nav-item"><a href="#" class="nav-link">会社情報</a></li>-->
                         </div>
                     </div>
                 </form>
