--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <!-- 576px以上の画面幅のとき、左側は3つ分のカラム幅で表示する指定を追加 -->
             <div class="col-sm-3">
                 <!-- 電話に関するBootstrap Iconsのアイコンを「お電話：」の左に追加 -->
-                <img class="bi bi-telephone-fill" src="https://e238b580307540dd9fce3961256a0b45.vfs.cloud9.ap-northeast-1.amazonaws.com/_static/kadai-bootstrap/icons/telephone-fill.svg" alt="アイコン"> <strong>お電話：</strong>
+                <img class="bi bi-telephone-fill" src="../kadai-bootstrap/icons/telephone-fill.svg" alt="アイコン"> <strong>お電話：</strong>
             </div>
 
             <!-- 576px以上の画面幅のとき、右側は9つ分のカラム幅で表示する指定を追加 -->
@@ -50,7 +50,7 @@
                 <p>該当する内容の電話番号におかけください。</p>
                 <!-- テーブルの装飾を適用する指定を追加 -->
                 <!-- さらにテーブルへ枠を追加する指定、行ごとの背景色が交互に変わる指定を追加 -->
-                <table class="mt-4, table table-bordered table-striped">
+                <table class="mt-4 table table-bordered table-striped">
                     <thead>
                         <tr>
                             <th>内容</th>
@@ -82,11 +82,11 @@
                     <!-- カードのタイトル部分として設定 -->
                     <div class="card-header">
                         <!-- 営業時間の情報に関するBootstrap Iconsのアイコンを「営業時間」の左に追加 -->
-                        <img class="bi bi-info-circle-fill" src="https://e238b580307540dd9fce3961256a0b45.vfs.cloud9.ap-northeast-1.amazonaws.com/_static/kadai-bootstrap/icons/info-circle-fill.svg" alt="アイコン"> 営業時間
+                        <img class="bi bi-info-circle-fill" src="../kadai-bootstrap/icons/info-circle-fill.svg" alt="アイコン"> 営業時間
                     </div>
 
                     <!-- カードの本文部分として設定 -->
-                    <div class="list-group list-group-flush">
+                    <div class="card-body">
                         平日10時〜19時（土日・祝日は対応しておりません）
                     </div>
                 </div>
@@ -98,7 +98,7 @@
             <!-- 576px以上の画面幅のとき、左側は3つ分のカラム幅で表示する指定を追加 -->
             <div class="col-sm-3">
                 <!-- メールに関するBootstrap Iconsのアイコンを「メール：」の左に追加 -->
-                <img class="bi bi-envelope" src="https://e238b580307540dd9fce3961256a0b45.vfs.cloud9.ap-northeast-1.amazonaws.com/_static/kadai-bootstrap/icons/envelope.svg?_c9_id=livepreview4&_c9_host=https://ap-northeast-1.console.aws.amazon.com" alt="アイコン"> <strong>メール：</strong>
+                <img class="bi bi-envelope" src="../kadai-bootstrap/icons/envelope.svg" alt="アイコン"> <strong>メール：</strong>
             </div>
 
             <!-- 576px以上の画面幅のとき、右側は9つ分のカラム幅で表示する指定を追加 -->
@@ -111,7 +111,7 @@
                     <!-- ラベルとフォーム部品を並べるためにグリッドを使う指定を追加 -->
                     <div class="mb-3 row">
                         <!-- 576px以上の画面幅のとき、ラベルは3つ分のカラム幅で表示する指定を追加 -->
-                        <label class="col-form-label, col-sm-3">会社名：</label>
+                        <label class="col-form-label col-sm-3">会社名：</label>
 
                         <!-- 576px以上の画面幅のとき、フォーム部品は9つ分のカラム幅で表示する指定を追加 -->
                         <div class="col-sm-9">
@@ -169,7 +169,7 @@
                         <!-- さらに、576px以上の画面幅のとき、9つ分のカラム幅で送信ボタンの表示部分の設定を追加 -->
                         <div class="offset-sm-3 col-sm-9">
                             <!-- 送信ボタンを緑色にする設定を追加 -->
-                            <button type="submit" class="btn w-100 btn-success"><a href="conplete.html">お問い合わせ内容を送信する</a></button>
+                            <button type="submit" class="btn w-100 btn-success">お問い合わせ内容を送信する</button>
                             <!--<li class="nav-item"><a href="#" class="nav-link">会社情報</a></li>-->
                         </div>
                     </div>
