--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <!-- 576px以上の画面幅のとき、左側は3つ分のカラム幅で表示する指定を追加 -->
             <div class="col-sm-3">
                 <!-- 電話に関するBootstrap Iconsのアイコンを「お電話：」の左に追加 -->
-                <img class="bi bi-telephone-fill" src="../kadai-bootstrap/icons/telephone-fill.svg" alt="アイコン"> <strong>お電話：</strong>
+                <img class="mb-1" src="../kadai-bootstrap/icons/telephone-fill.svg" alt="アイコン"> <strong>お電話：</strong>
             </div>
 
             <!-- 576px以上の画面幅のとき、右側は9つ分のカラム幅で表示する指定を追加 -->
@@ -82,7 +82,7 @@
                     <!-- カードのタイトル部分として設定 -->
                     <div class="card-header">
                         <!-- 営業時間の情報に関するBootstrap Iconsのアイコンを「営業時間」の左に追加 -->
-                        <img class="bi bi-info-circle-fill" src="../kadai-bootstrap/icons/info-circle-fill.svg" alt="アイコン"> 営業時間
+                        <img class="mb-1" src="../kadai-bootstrap/icons/info-circle-fill.svg" alt="アイコン"> 営業時間
                     </div>
 
                     <!-- カードの本文部分として設定 -->
@@ -98,7 +98,7 @@
             <!-- 576px以上の画面幅のとき、左側は3つ分のカラム幅で表示する指定を追加 -->
             <div class="col-sm-3">
                 <!-- メールに関するBootstrap Iconsのアイコンを「メール：」の左に追加 -->
-                <img class="bi bi-envelope" src="../kadai-bootstrap/icons/envelope.svg" alt="アイコン"> <strong>メール：</strong>
+                <img class="mb-1" src="../kadai-bootstrap/icons/envelope.svg" alt="アイコン"> <strong>メール：</strong>
             </div>
 
             <!-- 576px以上の画面幅のとき、右側は9つ分のカラム幅で表示する指定を追加 -->
@@ -122,7 +122,7 @@
                     <!-- ラベルとフォーム部品を並べるためにグリッドを使う指定を追加 -->
                     <div class="mb-3 row">
                         <!-- 576px以上の画面幅のとき、ラベルは3つ分のカラム幅で表示する指定を追加 -->
-                        <label class="col-form-label, col-sm-3">氏名：</label>
+                        <label class="col-form-label col-sm-3">氏名：</label>
 
                         <!-- 576px以上の画面幅のとき、フォーム部品は9つ分のカラム幅で表示する指定を追加 -->
                         <div class="col-sm-9">
@@ -133,7 +133,7 @@
                     <!-- ラベルとフォーム部品を並べるためにグリッドを使う指定を追加 -->
                     <div class="mb-3 row">
                         <!-- 576px以上の画面幅のとき、ラベルは3つ分のカラム幅で表示する指定を追加 -->
-                        <label class="col-form-label, col-sm-3">メール：</label>
+                        <label class="col-form-label col-sm-3">メール：</label>
 
                         <!-- 576px以上の画面幅のとき、フォーム部品は9つ分のカラム幅で表示する指定を追加 -->
                         <div class="col-sm-9">
@@ -144,7 +144,7 @@
                     <!-- ラベルとフォーム部品を並べるためにグリッドを使う指定を追加 -->
                     <div class="mb-3 row">
                         <!-- 576px以上の画面幅のとき、ラベルは3つ分のカラム幅で表示する指定を追加 -->
-                        <label class="col-form-label, col-sm-3">電話番号：</label>
+                        <label class="col-form-label col-sm-3">電話番号：</label>
 
                         <!-- 576px以上の画面幅のとき、フォーム部品は9つ分のカラム幅で表示する指定を追加 -->
                         <div class="col-sm-9">
@@ -155,7 +155,7 @@
                     <!-- ラベルとフォーム部品を並べるためにグリッドを使う指定を追加 -->
                     <div class="mb-3 row">
                         <!-- 576px以上の画面幅のとき、ラベルは3つ分のカラム幅で表示する指定を追加 -->
-                        <label class="col-form-label, col-sm-3">内容：</label>
+                        <label class="col-form-label col-sm-3">内容：</label>
 
                         <!-- 576px以上の画面幅のとき、フォーム部品は9つ分のカラム幅で表示する指定を追加 -->
                         <div class="col-sm-9">
@@ -170,7 +170,6 @@
                         <div class="offset-sm-3 col-sm-9">
                             <!-- 送信ボタンを緑色にする設定を追加 -->
                             <button type="submit" class="btn w-100 btn-success">お問い合わせ内容を送信する</button>
-                            <!--<li class="nav-item"><a href="#" class="nav-link">会社情報</a></li>-->
                         </div>
                     </div>
                 </form>
